# fixitfelix

./: .gitignore  LICENSE  README.md  pyproject.toml
fixitfelix/: cli.py  config.py  either.py  error_handling.py  fix.py  source.py  tdms_helpers.py
tests/: test_either.py  test_error_handling.py  test_fix.py  test_integration.py  test_integration_cli.py  test_tdms_helpers.py
tests/assets/: example_file.tdms
tests/assets/example_folder_wrong_form/: example_file_2.tdms
